--- a/futuretask/pom.xml
+++ b/futuretask/pom.xml
@@ -54,6 +54,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
